work on mobile fs bug

--- a/src/features/fullScreenMode/fullScreenMode.css
+++ b/src/features/fullScreenMode/fullScreenMode.css
@@ -13,8 +13,8 @@ body.freeze-scroll {
   left: 0;
   top: 0;
   background-color: black;
-  height: 100%;
-  width: 100%;
+  /* height: 100%;
+  width: 100%; */
   display: flex;
   justify-content: center;
   align-content: center;
